# flex_ddG

./: .gitignore  README.md  pyproject.toml
assets/: 7DF4.cif
flex_ddg/: analysis.py  config.py  protocol.py  utils.py
